k8s/apps/cardano-book/base/referenceGrant.envoy-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: envoy-gateway
  namespace: cardano-book
  labels:
    app.kubernetes.io/name: cardano-book
    app.kubernetes.io/part-of: cardano-book
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: envoy-gateway
  to:
  - group: ""
    kind: Secret
    name: cardano-book-tls
