k8s/apps/cardano-book/base/deployment.cardano-book-staging.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cardano-book-staging
  namespace: cardano-book
  labels:
    app.kubernetes.io/name: cardano-book-staging
    app.kubernetes.io/part-of: cardano-book
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cardano-book-staging
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cardano-book-staging
    spec:
      containers:
      - name: cardano-book
        image: 015060878911.dkr.ecr.eu-central-1.amazonaws.com/cardano-book-staging:v1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        livenessProbe:
          periodSeconds: 30
          initialDelaySeconds: 10
          httpGet:
            port: http
            path: /
        readinessProbe:
          periodSeconds: 30
          initialDelaySeconds: 5
          httpGet:
            port: http
            path: /
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        fsGroup: 65534
