k8s/apps/cardano-book/base/httpRoute.cardano-book-production.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cardano-book-production
  namespace: cardano-book
  labels:
    app.kubernetes.io/name: cardano-book-production
    app.kubernetes.io/part-of: cardano-book
spec:
  hostnames:
  - CHANGEME
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ingress-1
    namespace: envoy-gateway
    sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: cardano-book-production
      port: 80
