k8s/apps/cardano-book/base/httpRoute.cardano-book-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cardano-book-redirect
  namespace: cardano-book
  labels:
    app.kubernetes.io/name: cardano-book
    app.kubernetes.io/part-of: cardano-book
spec:
  hostnames:
  - CHANGEME
  - CHANGEME
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ingress-1
    namespace: envoy-gateway
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
