k8s/apps/cardano-book/base/httpRoute.cardano-book-staging.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cardano-book-staging
  namespace: cardano-book
  labels:
    app.kubernetes.io/name: cardano-book-staging
    app.kubernetes.io/part-of: cardano-book
spec:
  parentRefs:
  - name: ingress-1
    namespace: envoy-gateway
    sectionName: https
  hostnames:
  - CHANGEME
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: cardano-book-staging
      port: 80
