k8s/apps/cardano-book/base/authorizationPolicy.cardano-book.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: cardano-book
  namespace: cardano-book
  labels:
    app.kubernetes.io/name: cardano-book
    app.kubernetes.io/part-of: cardano-book
spec:
  action: ALLOW
  rules:
  # Allow ingress from Envoy proxy pods only
  - from:
    - source:
        namespaces:
        - envoy-gateway-system
